--- a/res/layout-hdpi/activity_confirmorder.xml
+++ b/res/layout-hdpi/activity_confirmorder.xml
@@ -9,7 +9,7 @@
         android:id="@+id/topbarLayout"
         android:layout_width="fill_parent"
         android:layout_height="50dip"
-        android:background="@drawable/nav_bar_bg"
+        android:background="@drawable/navbar_bg"
         android:orientation="horizontal" >
 
         <TextView
