--- a/res/layout-hdpi/activity_onlineshop.xml
+++ b/res/layout-hdpi/activity_onlineshop.xml
@@ -12,7 +12,7 @@
         android:layout_height="45dp"
         android:layout_marginLeft="30dip"
         android:layout_marginRight="30dip"
-        android:background="@drawable/btn_n"
+        android:background="@drawable/btn"
         android:text="点击扫描二维码" />
 
 </LinearLayout>
