--- a/res/layout-hdpi/activity_register.xml
+++ b/res/layout-hdpi/activity_register.xml
@@ -109,6 +109,43 @@
         <View
             android:layout_width="fill_parent"
             android:layout_height="1dp"
+            android:layout_marginLeft="25dip"
+            android:layout_marginRight="20dip"
+            android:layout_marginTop="10dip"
+            android:background="@color/gray" />
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:paddingLeft="25dip"
+            android:paddingRight="20dip"
+            android:paddingTop="12dip" >
+
+            <TextView
+                style="@style/black_17"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:text="确认密码" />
+
+            <EditText
+                android:id="@+id/et_pwd2"
+                style="@style/black_17"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="18dip"
+                android:background="@null"
+                android:hint="请确认密码"
+                android:password="true"
+                android:singleLine="true" />
+        </LinearLayout>
+
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="1dp"
             android:layout_marginTop="12dip"
             android:background="@color/gray" />
     </LinearLayout>
