--- a/res/layout-hdpi/activity_facepay.xml
+++ b/res/layout-hdpi/activity_facepay.xml
@@ -122,16 +122,36 @@
                 android:layout_marginTop="10dip"
                 android:background="@color/gray" />
 
-            <Button
-                android:id="@+id/btn_confirm"
-                style="@style/white_20"
-                android:layout_width="fill_parent"
-                android:layout_height="45dp"
-                android:layout_marginBottom="10dip"
-                android:layout_marginTop="10dip"
-                android:clickable="false"
-                android:focusable="false"
-                android:text="@string/next" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" >
+
+                <Button
+                    android:id="@+id/btn_receive"
+                    style="@style/white_20"
+                    android:layout_width="0dip"
+                    android:layout_height="45dp"
+                    android:layout_marginBottom="10dip"
+                    android:layout_marginTop="10dip"
+                    android:layout_weight="1"
+                    android:clickable="false"
+                    android:focusable="false"
+                    android:text="收款" />
+
+                <Button
+                    android:id="@+id/btn_pay"
+                    style="@style/white_20"
+                    android:layout_width="0dip"
+                    android:layout_height="45dp"
+                    android:layout_marginBottom="10dip"
+                    android:layout_marginLeft="15dip"
+                    android:layout_marginTop="10dip"
+                    android:layout_weight="1"
+                    android:clickable="false"
+                    android:focusable="false"
+                    android:text="付款" />
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 
