--- a/res/layout-hdpi/activity_icbcmain.xml
+++ b/res/layout-hdpi/activity_icbcmain.xml
@@ -25,7 +25,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="工银e支付" />
+            android:text="虚拟卡" />
     </RelativeLayout>
 
     <ImageView
