--- a/res/layout-hdpi/activity_success.xml
+++ b/res/layout-hdpi/activity_success.xml
@@ -88,6 +88,7 @@
         android:layout_marginRight="45dip"
         android:layout_marginTop="100dip"
         android:background="@drawable/btn"
-        android:text="完成" />
+        android:text="完成"
+        android:textColor="@color/white" />
 
 </LinearLayout>
