--- a/res/layout-xhdpi/activity_homepage.xml
+++ b/res/layout-xhdpi/activity_homepage.xml
@@ -2,16 +2,16 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@drawable/homepage"
+    android:background="@drawable/homepager2"
     android:orientation="vertical" >
 
     <Button
         android:id="@+id/btn1"
         android:layout_width="60dip"
         android:layout_height="70dip"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="48dp"
-        android:layout_toRightOf="@+id/btn1"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="10dip"
+        android:layout_marginTop="80dip"
         android:background="#8DEEEE" />
 
 </RelativeLayout>
